Added MATE desktop environment
Removed GNOME and KDE desktop environments
Extended syntax description of mount points, you can now specify to mount /from/dir:/to/dir
Restore Android after closing Xorg session in framebuffer mode
Make an unified container profiles for CLI and the application interface
Created a repository of containers

1.5.6
Fixed apt resolve in stretch and xenial
Added support kali-rolling in Kali Linux
Added target type "Auto" for manual prepare target path
Added timestamp support to log filename (${TIMESTAMP} variable)
End of support Debian Squeeze and Kali Moto
Added support /dev/net/tun (for OpenVPN)
Automatically switch to root (unchroot)
Mount root with options "exec,suid,dev"
Fixed Arch Linux packages (close #529)

1.5.5
Open a shell from Android Terminal Emulator
Added support CentOS
Translated into Korean

1.5.4
Fixed a problem with user password that contains uppercase letters
Added support system BusyBox, a built-in is no longer supported
Added option to display a time stamp
Improved support for framebuffer
Translated into Portuguese

1.5.3
Added an option to change the chroot directory
Added unchroot script
Implemented integration with Android
Implemented integration with XServer XSDL
Translated into Slovak and French
Automatically select the language

1.5.2
Added support Slackware
Added support Kali Linux 2.0 (sana)
Added support tar.xz for RootFS installation
Added support x86_64 (amd64) distributions
Added export a container as rootfs archive (tgz or tbz2)
Modified update ENV mechanism
Updated command line interface
Added ability to change password from GUI
Translated into Vietnamese
Updated root checker
Added support aarch64 for Arch Linux
Fixed autostart problem

1.5.1
Added support for installation type in RAM
Updated command "status"
Updated security groups
Added fix for tty0 (use X options: "-sharevts vt0")
Added handling for shutdown event
Added support Ubuntu 15.10 (Wily Werewolf)
Added support Fedora 22 (armhfp only)