@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 25
+    buildToolsVersion '24.0.0'
 
     defaultConfig {
-        applicationId "ru.meefik.linuxdeploy"
+        applicationId 'ru.meefik.linuxdeploy'
         minSdkVersion 10
-        targetSdkVersion 24
-        versionCode 213
+        targetSdkVersion 25
+        versionCode 214
         versionName "2.0.0"
     }
     buildTypes {
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:support-v4:24.2.1"
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
 }
