@@ -53,8 +53,10 @@
     <string name="confirm_mount_discard_message">선택된 마운트 지점을 삭제하시겠습니까?</string>
     <string name="repository_import_message">%1$s\n\n크기: %2$s MB</string>
     <string name="repository_import_button">불러오기</string>
+    <string name="repository_purchase_button">구입하기</string>
     <string name="repository_change_url_title">저장소 URL</string>
     <string name="repository_default_description">설명 없음.</string>
+    <string name="write_permissions_disallow">이 앱이 사용자 저장소에 쓰기작업을 할 수 없습니다.</string>
 
     <string name="app_preferences">앱</string>
     <string name="title_screenlock_preference">화면 잠금</string>
@@ -305,7 +307,5 @@
 
     <string name="help_text">\n<b>도움말</b>\n\n이 응용 프로그램은 GNU/Linux 배포판을 설치하고 chroot로 마운트 하는 프로그램 입니다.\n\n순서 :\n1. 루트 권한을 허용해 주세요. (루팅해야 합니다.)\n2. <a href="https://play.google.com/store/apps/details?id=ru.meefik.busybox">이 경로</a>를 통해 BusyBox를 설치하세요. (반드시 이 BusyBox로 설치하셔야 합니다.)\n3. 인터넷 연결을 확인하세요.\n4. 밑에 있는 다운로드 아이콘을 눌러서 설치 환경을 설정하세요.\n5. 설치버튼을 누르세요.\n6. 설치가 모두 다되는동안 기다리세요.\n7. \"START\" 버튼을 눌러서 시작하세요.\n8. CLI, SSH, VNC 등으로 리눅스에 연결하세요.\n\n자세한 내용은 \"About\" 를 참조해 주세요.\n\n버그 신고는 <a href="https://github.com/meefik/linuxdeploy/issues">여기</a>(한글가능, Github 아이디 필요) 로 해 주세요.</string>
     <string name="about_text">이 응용 프로그램은 GNU/Linux 배포판을 설치하고 chroot로 마운트 하는 프로그램 입니다.\n\n자세한 내용은 <a href="https://github.com/meefik/linuxdeploy">프로젝트 사이트</a>, <a href="http://4pda.ru/forum/index.php?showtopic=378043">포럼(러시아어)</a> 또는 <a href="http://meefik.ru">개발자 사이트(러시아어)</a> 를 확인하세요.\n\n&#169; 2012&#8211;2015 Anton Skshidlevsky, GPLv3</string>
-    <string name="repository_purchase_button">구입하기</string>
-    <string name="write_permissions_disallow">이 앱이 사용자 저장소에 쓰기작업을 할 수 없습니다.</string>
 
 </resources>
